# codicons

./: README.md  codicons.ml  codicons.mli  codicons.opam  dune  generate.py  svg.ml
