opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/codicons"
bug-reports: "https://github.com/janestreet/codicons/issues"
dev-repo: "git+https://github.com/janestreet/codicons.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/codicons/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "core"
  "ppx_jane"
  "virtual_dom"
  "dune"        {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Icons from VS code"
description: "
Icons from VS code
"
